VideoPress: Fix spacings

--- a/projects/packages/videopress/src/client/admin/components/video-row/style.module.scss
+++ b/projects/packages/videopress/src/client/admin/components/video-row/style.module.scss
@@ -4,9 +4,9 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	padding: calc( var(--spacing-base) * 3 );
+	padding: calc( var(--spacing-base) * 2 ) var(--spacing-base); // 16px | 8px
 	background-color: var(--jp-white);
-	gap: calc( var(--spacing-base) * 2 );
+	gap: calc( var(--spacing-base) * 2 ); // 16px
 	border: none;
 	width: 100%;
 
@@ -30,7 +30,7 @@
 .info-wrapper {
 	display: flex;
 	align-items: center;
-	gap: calc( var(--spacing-base) * 3 );
+	gap: calc( var(--spacing-base) * 3 ); // 24px
 	min-width: 0;
 	position: relative;
 
@@ -40,8 +40,8 @@
 }
 
 .poster {
-	width: 92px;
-	height: 60px;
+	width: 90px;
+	height: 50px;
 	object-fit: cover;
 	border-radius: var(--jp-border-radius);
 }
@@ -61,7 +61,7 @@
 		position: absolute;
 		top: -10px;
 		background: var(--jp-yellow-20);
-		padding: 0px var(--spacing-base);
+		padding: 0px var(--spacing-base); // 0 | 8px
 		font-size: var(--font-body-extra-small);
 		border-radius: 4px;
 		line-height: 20px;
@@ -87,7 +87,7 @@
 .stats {
 	display: flex;
 	align-items: center;
-	gap: calc( var(--spacing-base) * 3 );
+	gap: calc( var(--spacing-base) * 3 ); // 24px
 
 	& > * {
 		flex: 1;
@@ -101,13 +101,13 @@
 	&.small {
 		flex-direction: column;
 		align-items: flex-start;
-		margin-bottom: var(--spacing-base);
+		margin-bottom: var(--spacing-base); // 8px
 		gap: 0;
 
 		& > * {
 			display: flex;
 			width: 100%;
-			margin-bottom: var(--spacing-base);
+			margin-bottom: var(--spacing-base); // 8px
 
 			& > * {
 				flex: 1;
@@ -120,15 +120,15 @@
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
-	gap: calc( var(--spacing-base) * 3 );
-	margin-right: calc( var(--spacing-base) * 3 );
+	gap: calc( var(--spacing-base) * 3 ); // 24px
+	margin-right: calc( var(--spacing-base) * 3 ); // 24px
 
 	.trash {
 		fill: var(--jp-red-60);
 	}
 
 	.popover {
-		padding: var(--spacing-base);
+		padding: var(--spacing-base); // 8px
 		text-align: center;
 		white-space: nowrap;
 	}
